# picobello

./: .gitignore  .gitlab-ci.yml  Bender.local  Bender.yml  Makefile  README.md  experiments.sh  floo_picobello_noc_pkg_REDUCTION.sv  iis-env.sh  pyproject.toml  requirements.txt
.github/workflows/: gitlab-ci.yml  lint.yml
.gitlab/: common.yml  sw-tests.yml
cfg/: exp_picobello_noc.yml  fpga_mini_picobello.yml  fpga_mini_picobello_noc.yml  fpga_picobello_noc.yml  mcast_snitch_cluster.hjson  mini_picobello_noc.yml  picobello_noc.yml  picobello_noc_tapeout.yml  rv_plic.cfg.hjson  serial_link.hjson  snitch_cluster.hjson  snitch_cluster.json  snitch_cluster_tapeout.hjson
cfg/rdl/: cheshire_external.rdl  cheshire_tile.rdl  fhg_spu_tile.rdl  mem_tile.rdl  pb_soc_regs.rdl  picobello.rdl  snitch_tile.rdl
experiments/: .gitignore  picobello.py
experiments/barrier/: __init__.py  experiments.py  fit.py  plot.py  roi.json.tpl
experiments/dma_multicast/: .gitignore  README.md  experiments.py
experiments/dma_multicast_v2/: README.md  __init__.py  experiments.py  fit.py  model.py  plot.py  verify.py
experiments/dma_reduction/: verify.py
experiments/mcast/: README.md  experiments.py  quick_plot.py  roi.json
experiments/reduction/: experiments.py  fit.py  model.py  plot.py  verify.py
experiments/summa_gemm/: __init__.py  cfg.json.tpl  (+4 more)
hw/: cheshire_tile.sv  cluster_tile.sv  dummy_tile.sv  fhg_spu_tile.sv  mem_tile.sv  picobello_pkg.sv  picobello_top.sv  snitch_hwpe_subsystem.sv  snitch_tcdm_aligner.sv  sparta_tile.sv  spm_tile.sv
sw/: sw.mk
util/: axi_analyzer.py
(+117 files in other folders)
